apps/dashboard/app/assets/stylesheets/custom.scss
// Bootstrap custom CSS

.sr-only * {
    @extend .sr-only;
}

.sr-only.focusable, .sr-only.focusable * {
    position: initial;
}

.card {
  a {
    text-decoration: none !important;
  }
}

.breadcrumb-item {
  a {
    text-decoration: none !important;
  }
}

.card-header h3 {
  font-size: 16px;
  font-weight: bold;
}

// Shim for buttons that still use old Bootstrap 3 default button class.
.btn-default {
  color: #393939;
  background-color: #f8f8f8;
  border-color: #cbcbcb;
}

.btn-default:hover {
  background-color: darken(#f8f8f8, 10%);
}

